--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Puzzle con divs</title>
+    <title>Puzzle con divs terry</title>
 </head>
 <h1>Hola mundo</h1>
 <body>
